some comments and minor improvements.

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1,3 +1,4 @@
+/*styling generel components in all pages*/
 body {
    font-family: Helvetica, "Times New Roman", Coursera;
    font-size: 100%;
@@ -8,6 +9,35 @@ body {
 
 }
 
+h1 {color:sienna;
+    font-size: 2em;
+    text-align: left;
+    clear:both;
+    text-shadow: 1px 1px;
+}
+h2 {color:#ff0084;
+    font-size: 1.4em;
+    text-align: left;
+    margin: 15px 0px;
+    font-weight: bold;
+}
+p {margin-left:10px;
+   font-size: 1em;
+}
+/* Styling spcific elements with id's*/
+#signin {float:right;}
+#searchbar{float:right;}
+
+
+
+/* Styling picture in front page/index.html elements with id's*/
+.frontpics {margin-left: -3%;
+           height:auto;
+           max-width: 100%;
+}
+
+/* Styling components of recipe pages. Such as lists user comments. */
+
 .ingredients li {
   list-style-type: none;
   margin:5px -5px;
@@ -16,13 +46,19 @@ body {
   
 }
 
-nav { width:96vw;}
-
-.frontpics {margin-left: -3%;
-           height:auto;
-           max-width: 100%;
+ol {
+    list-style-type: decimal;
+    list-style-position: outside;
+    margin-left:20px
 }
 
+
+.preptime span{
+     text-align: center;
+     padding-top:1px;
+     font-size: 1.5em;
+    background-color: #eee;
+}
 .comments p { 
    font-family: "Courier New", Arial, Coursera;
    font-size: 100%;
@@ -40,7 +76,7 @@ and the left and right margins are straight (like in magazines and newspapers)  
     right:30px;
     display:inline;
 }
-
+/* Styling & layout of the navigation menu used in all pages. . */
 .navleft {
     font-size: 1.5em;
     list-style-type: none;     
@@ -71,68 +107,13 @@ ul.navleft a:hover {
     color:white;
     font-style: italic;
 }
-
-ol {
-    list-style-type: decimal;
-    list-style-position: outside;
-    margin-left:20px
-}
-
-#signin {float:right;}
-
-.preptime span{
-     text-align: center;
-     padding-top:1px;
-     font-size: 1.5em;
-    background-color: #eee;
-}
+input.submitbutton:hover {
+    background:skyblue;
+    }
 
 
-h1 {color:sienna;
-    font-size: 2em;
-    text-align: left;
-    clear:both;
-    text-shadow: 1px 1px;
-}
-h2 {color:#ff0084;
-    font-size: 1.4em;
-    text-align: left;
-    margin: 15px 0px;
-    font-weight: bold;
-}
-p {margin-left:10px;
-   font-size: 1em;
-}
 
-.calendar-icon {
-width: 150px;
-height: 120px;
-}
-
-
-/* Weekdays (Mon-Sun) */
-.weekdays {
-    margin: 5px;
-    padding: 10px 0;
-    background-color:#ddd;
-    border: 2px solid;
-}
-
-.weekdays li {
-    display: inline-block;
-    width: 14%;
-    color: #666;
-    text-align: center;
-}
-
-/* Days (1-31) */
-.days {
-    padding: 10px 0;
-    background: #eee;
-    margin: 5px;
-    border: 2px solid;
-
-}
+/* Styling table in calander page*/
 table {
     width:100%
     
@@ -158,6 +139,8 @@ td {width:14.2%;
     border-collapse: collapse;
     
 }
+
+/* Styling link behavior */
 a:link {
     color: blue;
     font-family: Helvetica, Coursera;
